RESOLVED FIXED294226
REGRESSION (UI-side compositing): Incremental paints don't update the repaint counter
https://bugs.webkit.org/show_bug.cgi?id=294226
Summary REGRESSION (UI-side compositing): Incremental paints don't update the repaint...
Simon Fraser (smfr)
Reported 2025-06-09 15:13:02 PDT
With debug layer borders on, the repaint counter doesn't update for incremental repaints.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-09 15:13:20 PDT
Simon Fraser (smfr)
Comment 2 2025-06-09 15:45:17 PDT
EWS
Comment 3 2025-06-10 08:01:34 PDT
Committed 296037@main (db2cf78d7a70): <https://commits.webkit.org/296037@main> Reviewed commits have been landed. Closing PR #46520 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.