REGRESSION (UI-side compositing): Incremental paints don't update the repaint counter https://bugs.webkit.org/show_bug.cgi?id=294226 rdar://152871424

Reviewed by Matt Woodrow.

The call to `dirtyRepaintCounterIfNecessary()` was lost somewhere in the
shuffle of `RemoteLayerWithRemoteRenderingBackingStore` addition, so put it back by
moving a bit more code into `RemoteLayerWithRemoteRenderingBackingStore::prepareToDisplay()`.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::dirtyRepaintCounterIfNecessary): Need a pixel more height.
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
(WebKit::RemoteLayerBackingStoreCollection::prepareBackingStoresForDisplay):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithInProcessRenderingBackingStore.mm:
(WebKit::RemoteLayerWithInProcessRenderingBackingStore::prepareToDisplay):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStore::prepareToDisplay):

Canonical link: https://commits.webkit.org/296037@main